wp_derive_request_builder/tests/fail/url_not_ident.stderr
error: Expecting key value pairs (url = "", params = FooParam, output = FooOutput)
 --> tests/fail/url_not_ident.rs:4:22
  |
4 |     #[contextual_get("url" = "/users", params = &UserListParams, output = Vec<SparseUser>)]
  |                      ^^^^^
